fix size menu on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12093,7 +12093,7 @@ header .navbar .right-side-nav .cart {
   border: none;
   background: #663C2A;
   padding-bottom: 1rem;
-  width: 240px;
+  width: 260px;
 }
 @media (min-width: 576px) {
   .menu-section .menu-container .menu-content .menu-item .menu-list .card {
