--- a/scss/sections/_menu.scss
+++ b/scss/sections/_menu.scss
@@ -132,7 +132,7 @@
                         padding-bottom: 1rem;
 
                         @include media-breakpoint-up(xs) {
-                            width: 240px;
+                            width: 260px;
                         }
                         @include media-breakpoint-up(sm) {
                             width: 240px;
